--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "final-form": "^4.20.7",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-final-form": "^6.5.9",
     "react-icons": "^4.3.1",
     "react-redux": "^8.0.2",
     "react-router": "^6.3.0",
